2007-07-05  Paul Stevens <paul@nfg.nl>

	* modules/dbsqlite.c:
	add incremental sleep time between retries in case of sqlite locks

2007-07-04  Paul Stevens <paul@nfg.nl>

	* modules/dbsqlite.c:
	add retry loop to sqlite db_query

2007-07-03  Paul Stevens <paul@nfg.nl>

	* ChangeLog, check_dbmail_db.c, check_dbmail_mailbox.c, 
	check_dbmail_user.c, db.c, db.h, dbmail-imapsession.c, 
	dbmail-imapsession.h, dbmail.conf, dbmailtypes.h, imapcommands.c, 
	modules/dbmysql.c, modules/dbpgsql.c, modules/dbsqlite.c, 
	sql/mysql/2_2_5-2_3_0.mysql, sql/postgresql/2_2_5-2_3_0.pgsql, 
	sql/postgresql/create_tables.pgsql, sql/sqlite/2_2_5-2_3_0.sqlite, 
	sql/sqlite/create_tables.sqlite, test-scripts/testimap.py:
	merge branch/fastmailbox

2007-07-03  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_db.c, check_dbmail_mailbox.c, check_dbmail_user.c, 
	db.c, db.h, dbmail-imapsession.c, dbmail-imapsession.h, dbmail.conf, 
	dbmailtypes.h, imapcommands.c, modules/dbmysql.c, modules/dbpgsql.c, 
	modules/dbsqlite.c, sql/mysql/2_2_5-2_3_0.mysql, 
	sql/postgresql/2_2_5-2_3_0.pgsql, sql/postgresql/create_tables.pgsql, 
	sql/sqlite/2_2_5-2_3_0.sqlite, sql/sqlite/create_tables.sqlite, 
	test-scripts/testimap.py:
	merge branch/fastmailbox

2007-07-02  Paul Stevens <paul@nfg.nl>

	* ChangeLog, dbmail-imapsession.c:
	fix g_strncasecmp problem (JF)
	* ChangeLog, serverparent.c:
	allow zero spare children
	* dbmail-imapsession.c, imapd.c:
	fix sig11 in iconv code (bug #579)

2007-07-02  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	fix g_strncasecmp problem (JF)
	* ChangeLog, serverparent.c:
	allow zero spare children
	* dbmail-imapsession.c, imapd.c:
	fix sig11 in iconv code (bug #579)

2007-07-01  Paul Stevens <paul@nfg.nl>

	* Makefile.in, list.c, man/Makefile.in:
	minor g_list_dedup fix and update of autoconf chain

2007-06-29  Paul Stevens <paul@nfg.nl>

	* ChangeLog, lmtp.c:
	make lmtpd return temp failure in case of database failure during 
	insertion
	* check_dbmail_db.c, db.c: